# opshero-backend

./: .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  deploy_flyio.ps1  deploy_flyio.sh  main.py  pyproject.toml  render.yaml  requirements.txt  start.py
engine/: __init__.py  analyzer.py  causal_chain.py  groq_client.py  index.py  learning_jobs.py  pattern_extractor.py  pattern_generator.py  pattern_validator.py  preprocessor.py  scorer.py  solution_generator.py
models/: __init__.py  admin.py  analysis.py  team.py  user.py
routers/: __init__.py  admin_announcements.py  admin_audit.py  admin_auth.py  admin_billing.py  admin_config.py  admin_contributions.py  admin_dashboard.py  admin_email.py  admin_feedback_hub.py  admin_groq.py  admin_learning.py  admin_patterns.py  admin_users.py  analyses.py  announcements.py  auth.py  billing.py  contributions.py  feedback.py  feedback_hub.py  github.py  integrations.py  patterns.py  sync.py  teams.py  webhooks.py
scripts/: create_admin.py
services/: email.py  geniuspay.py  slack_notifier.py
shared/patterns/: base-patterne.json  docker.json  git.json  index.json  kubernetes.json  npm.json  other.json  python.json  schema.v2.json  security.json  terraform.json  tests.json
tasks/: weekly_rerank.py
